--- a/test/fixtures/admin/authors.yml
+++ b/test/fixtures/admin/authors.yml
@@ -2,10 +2,10 @@
 
 one:
   id: 1
-  first_name: MyString
-  last_name: MyString
+  first_name: Pengfei
+  last_name: Shu
 
 two:
   id: 2
-  first_name: MyString
-  last_name: MyString
+  first_name: Robert
+  last_name: Martin
